kubernetes/attempt-3/manifests/client.yaml
apiVersion: v1
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              protocol: TCP
              address: 127.0.0.1
              port_value: 9001
          filter_chains:
            - filters:
                name: envoy.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                  codec_type: auto
                  stat_prefix: egress_http
                  route_config:
                    name: server_route
                    virtual_hosts:
                      - name: server_route
                        domains:
                          - "*"
                        routes:
                          - match:
                              prefix: "/"
                            route:
                              cluster: server
                  http_filters:
                    - name: envoy.router
                      typed_config: {}
      clusters:
        - name: server
          connect_timeout: 5s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: server
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: server
                          port_value: 8080
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
kind: ConfigMap
metadata:
  creationTimestamp: null
  name: envoy-config
---
apiVersion: v1
kind: Pod
metadata:
  name: client
spec:
  initContainers:
    - name: proxy-init
      image: tehusername/proxy-init:1.2
      env:
        - name: GID
          value: "1337"
        - name: UID
          value: "1337"
        - name: PROXY_PORT
          value: "9001"
      securityContext:
        capabilities:
          add: ["NET_ADMIN"]
        privileged: true
  containers:
    - name: client
      image: tehusername/sample-service:1.1
      env:
        - name: SVC_NAME
          value: "Client"
    - name: proxy
      image: envoyproxy/envoy:latest
      securityContext:
        runAsUser: 1337
      command: ['/usr/local/bin/envoy']
      args: ['-c', '/etc/envoy/envoy.yaml']
      ports:
        - containerPort: 9001
          name: egress
        - containerPort: 8001
          name: admin
      volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
  volumes:
    - name: envoy-config
      configMap:
        name: envoy-config
